--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.1",
-    "simple-icons": "^13.10.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.1",
+    "react-slick": "^0.31.0",
+    "simple-icons": "^13.10.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
