--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-slick": "^0.31.0",
+    "react-toastify": "^11.0.5",
     "simple-icons": "^13.10.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
